# heavy_weather

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  demo.frag  demo.vert  demo_fade.frag  demo_fade.vert  flake.nix  pre-commit-config.yaml  todo.md
examples/: CMakeLists.txt  Demo.hpp  demo.cpp
examples/resources/: demo.frag  demo.vert  demo_fade.frag
examples/resources/materials/: deferred.json  fade.json  lit.json  solid_color.json  texture.json
examples/resources/shaders/: demo.vert  demo_lit.frag  demo_lit.vert  solid_color.frag
heavy_weather/: CMakeLists.txt  engine.h
heavy_weather/core/: Application.cpp  Application.hpp  Asserts.hpp  Entry.cpp  Entry.cpp.no  Entry.hpp  Input.hpp  InputManager.hpp  Logger.cpp  Logger.hpp  Window.hpp
heavy_weather/core/Input/: InputManager.hpp  InputSystem.hpp  KeyCodes.hpp
heavy_weather/ecs/: CMakeLists.txt  ecs.hpp  ecs_test.cpp  sparse.hpp  sparse_test.cpp
heavy_weather/event/: EntityRemoved.hpp  Event.hpp  EventCallback.hpp  EventSystem.hpp  GuiRenderEvent.hpp  KeyPressedEvent.hpp  MouseMovedEvent.hpp  ResizeEvent.hpp  ResourceReloadEvent.hpp  Util.hpp  WidgetCloseEvent.hpp  WindowCloseEvent.hpp
heavy_weather/loaders/: Image.cpp  Image.hpp  Loader.hpp  ShaderSource.cpp  ShaderSource.hpp
heavy_weather/platform/: GLFWInputManager.cpp  GLFWInputManager.hpp  LinuxWindow.cpp  LinuxWindow.hpp  Platform.hpp  platform.h
heavy_weather/rendering/: BackendApi.hpp  Buffer.hpp  BuffersComponent.hpp  Camera.cpp  Camera.hpp  GeometryComponent.cpp  GeometryComponent.hpp  LightSourceComponent.hpp  Material.cpp  Material.hpp  MaterialComponent.hpp  Mesh.hpp  Pipeline.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  TextureComponent.hpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp  Types.hpp  VertexLayout.cpp  VertexLayout.hpp
heavy_weather/rendering/Backend/GL/: GLAPI.cpp  GLAPI.hpp  GLBuffer.cpp  GLBuffer.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLPipeline.cpp  GLPipeline.hpp  GLRenderTarget.cpp  GLRenderTarget.hpp  GLShader.cpp  GLShader.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLTexture.cpp  GLTexture.hpp  GLUniformBuffer.cpp  GLUniformBuffer.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  Utils.cpp  Utils.hpp
heavy_weather/rendering/Gui/: Gui.cpp  Gui.hpp  GuiComponent.hpp  IWidget.hpp
heavy_weather/rendering/Gui/Widgets/: MeshWidget.cpp  MeshWidget.hpp
heavy_weather/resources/: AssetLibrary.cpp  AssetLibrary.hpp  AssetManager.cpp  AssetManager.hpp  Image.cpp  Image.hpp  Loader.cpp  Loader.hpp  ShaderSource.cpp  ShaderSource.hpp
heavy_weather/scene/: Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
heavy_weather/scene/components/: NameComponent.hpp  RotateComponent.hpp  WidgetComponent.cpp  WidgetComponent.hpp
heavy_weather/scene/systems/: RenderSystem.cpp  RotateSystem.cpp  System.hpp
resources/: cube_vertices.hpp
resources/shaders/deferred/: deferred.vert  geometry.frag  lighting.frag
